refactor the wsf plugins with new architecture (incomplete).
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/EuPathWebSvcCommon/branches/stream@58178 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/WSFPlugin/.classpath
+++ b/WSFPlugin/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/WSF Plugin"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/WDK Model"/>
 	<classpathentry kind="lib" path="/WSF Plugin/lib/java/log4j-1.2.17.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/WDK Controller"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ApiCommon Shared Model"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
