Move ProjectMapper from ApiCommonShared to EuPathSiteCommon, and make EuPathWebSvcCommon depending on EuPathSiteCommon.
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/EuPathWebSvcCommon/branches/stream@58430 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/build.xml
+++ b/build.xml
@@ -17,6 +17,13 @@
       <property name="version" value="WDK_version_1-18"/>
     </ant>
   </target>  
+
+  <target name="EuPathSiteCommon-Installation">
+    <ant antfile="../EuPathSiteCommon/build.xml" target="EuPathSiteCommon-Installation">
+      <property name="project" value="WDK"/>
+      <property name="version" value="WDK_version_1-18"/>
+    </ant>
+  </target>  
     
   <target name="WDK-Checkout" unless="WDK.present"> 
     <ant target="defaultProjectCheckout" inheritAll="false">
@@ -48,6 +55,7 @@
   <!-- oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo -->
 
   <target name="EuPathWebSvcCommon-Installation" depends="WDK-Installation,
+                                                          EuPathSiteCommon-Installation,
                                                           EuPathWebSvcCommon/WSFPlugin-Installation">
 
     <ant target="defaultProjectInstall"/>
