close ResultSet quietly in text search so 'real' exception does not get overridden
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/EuPathWebSvcCommon/trunk@59650 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/WSFPlugin/.classpath
+++ b/WSFPlugin/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="lib" path="/WSF Plugin/lib/java/log4j-1.2.17.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/WDK Controller"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/EuPath Common Model"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/fgputil-util"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
