--- a/build.xml
+++ b/build.xml
@@ -4,28 +4,19 @@
   <!-- oooooooooooooooooooooooooo  Dependencies  oooooooooooooooooooooooooo -->
   <!-- oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo -->
 
-  <target name="WDK-Installation">
-    <ant antfile="../WDK/build.xml" target="WDK-Installation">
-      <property name="project" value="WDK"/>
-      <property name="version" value="WDK_version_1-18"/>
-    </ant>
-  </target>  
+  <import file="${projectsDir}/WDK/build.xml" />
 
-  <target name="WSF-WebInstallation">
-    <ant antfile="../WSF/build.xml" target="WSF-WebInstallation">
-      <property name="project" value="WSF"/>
-      <property name="version" value="WDK_version_1-18"/>
-    </ant>
-  </target>  
-
-  <target name="EuPathSiteCommon-Installation">
-    <ant antfile="../EuPathSiteCommon/build.xml" target="EuPathSiteCommon-Installation">
-      <property name="project" value="WDK"/>
-      <property name="version" value="WDK_version_1-18"/>
-    </ant>
-  </target>  
     
-  <target name="WDK-Checkout" unless="WDK.present"> 
+  <!-- oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo -->
+  <!-- oooooooooooooooooooooooooo    Checkout    oooooooooooooooooooooooooo -->
+  <!-- oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo -->
+  <target name="EuPathWebSvcCommon-ChildCheckout">
+    <available file="${projectsDir}/WDK" type="dir"  property="WDK.present" />
+    <antcall target="WDK-Checkout"/>
+  </target>
+  
+
+  <target name="WDK-Checkout" unless="WDK.present">
     <ant target="defaultProjectCheckout" inheritAll="false">
       <property name="svnurl" value="https://www.cbil.upenn.edu/svn/gus/WDK"/>
       <property name="project" value="WDK"/>
@@ -33,14 +24,7 @@
     </ant>
   </target>
 
-  <!-- oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo -->
-  <!-- oooooooooooooooooooooooooo    Checkout    oooooooooooooooooooooooooo -->
-  <!-- oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo -->
-  <target name="EuPathWebSvcCommon-ChildCheckout">
-    <available file="../WDK" type="dir"  property="WDK.present" />
-    <antcall target="WDK-Checkout"/>
-  </target>
-  
+
   <!-- oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo -->
   <!-- oooooooooooooooooooooooooo    Update    oooooooooooooooooooooooooo -->
   <!-- oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo -->
@@ -55,11 +39,11 @@
   <!-- oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo -->
 
   <target name="EuPathWebSvcCommon-Installation" depends="WDK-Installation,
-                                                          EuPathSiteCommon-Installation,
                                                           EuPathWebSvcCommon/WSFPlugin-Installation">
 
-    <ant target="defaultProjectInstall"/>
-
+    <ant target="defaultProjectInstall">
+      <property name="project" value="EuPathWebSvcCommon"/>
+    </ant>
 
   </target>
 
@@ -80,7 +64,7 @@
   <!-- oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo -->
 
   <target name="EuPathWebSvcCommon-WebInstallation" depends="WSF-WebInstallation,
-                                                              EuPathWebSvcCommon-Installation">
+                                                             EuPathWebSvcCommon-Installation">
 
   </target>
 
