--- a/WSFPlugin/.classpath
+++ b/WSFPlugin/.classpath
@@ -2,11 +2,12 @@
 <classpath>
 	<classpathentry kind="src" path="src/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/WSF Plugin"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/WDK Model"/>
-	<classpathentry kind="lib" path="/WSF Plugin/lib/java/log4j-1.2.17.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/WDK Controller"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/wsf-plugin-api"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/wdk-model"/>
+	<classpathentry kind="lib" path="/wsf-plugin-api/lib/java/log4j-1.2.17.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/wdk-controller"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/EuPath Common Model"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/fgputil-util"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/wsf-client-api"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
