--- a/WSFPlugin/.classpath
+++ b/WSFPlugin/.classpath
@@ -2,12 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/wsf-plugin-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/wdk-model"/>
-	<classpathentry kind="lib" path="/wsf-plugin-api/lib/java/log4j-1.2.17.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/wdk-controller"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/EuPath Common Model"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/fgputil-util"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/wsf-client-api"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/WSF Plugin"/>
+	<classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.17/log4j-1.2.17.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/WDK Model"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
