Slight build improvment for consistency
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/EuPathWebSvcCommon/trunk@65025 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/build.xml
+++ b/build.xml
@@ -64,7 +64,15 @@
   <!-- oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo -->
 
   <target name="EuPathWebSvcCommon-WebInstallation" depends="EuPathSiteCommon-WebInstallation,
-                                                             EuPathWebSvcCommon-Installation">
+                                                             EuPathWebSvcCommon/WSFPlugin-WebInstallation">
+  </target>
+
+  <target name="EuPathWebSvcCommon/WSFPlugin-WebInstallation">
+
+    <ant target="defaultWebComponentInstall">
+      <property name="project" value="EuPathWebSvcCommon"/>
+      <property name="component" value="WSFPlugin"/>
+    </ant>
 
   </target>
 
